[package]
name = "agc-bindings"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "Rust FFI bindings for the AGC (Assembled Genomes Compressor) library"
repository = "https://github.com/yourusername/agc-bindings"
documentation = "https://docs.rs/agc-bindings"
readme = "README.md"
keywords = ["genomics", "compression", "bioinformatics", "ffi"]
categories = ["science", "api-bindings"]
links = "agc"

[dependencies]
# No runtime dependencies needed for the bindings

[build-dependencies]
cc = "1.0"
walkdir = "2.4"
num_cpus = "1.16"

[dev-dependencies]
# For testing
tempfile = "3.8"

[lib]
name = "agc_bindings"
path = "src/lib.rs"

# Optionally build a C dynamic library
crate-type = ["rlib", "cdylib"]

[features]
default = []

# Feature to build AGC from source automatically
build-from-source = []

# Feature for vendored AGC (include AGC source in the crate)
vendored = []

[package.metadata.docs.rs]
# Documentation configuration for docs.rs
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
# Allow C++ exceptions to propagate through Rust code
# This prevents "Rust cannot catch foreign exceptions" error
panic = "abort"

[profile.test]
opt-level = 2
# IMPORTANT: Allow C++ exceptions from AGC library
panic = "abort"