[package]
name = "libagc-sys"
version = "0.1.0"
edition = "2021"
authors = ["Pjotr Prins <pjotr.public01@thebird.nl>"]
license = "MIT"
description = "Rust FFI bindings for the AGC (Assembled Genomes Compressor) library using the C ABI"
repository = "https://github.com/yourusername/libagc-sys"
documentation = "https://docs.rs/libagc-sys"
readme = "README.md"
keywords = ["genomics", "compression", "bioinformatics", "ffi"]
categories = ["science", "api-bindings"]
links = "agc"

[dependencies]
# No runtime dependencies needed for the bindings

[build-dependencies]
cc = "1.0"
walkdir = "2.4"
num_cpus = "1.16"

[dev-dependencies]
# For testing
tempfile = "3.8"

[lib]
name = "libagc_sys"
path = "src/lib.rs"

# Optionally build a C dynamic library
crate-type = ["rlib", "cdylib"]

[features]
default = []

# Feature to build AGC from source automatically
build-from-source = []

# Feature for vendored AGC (include AGC source in the crate)
vendored = []

[package.metadata.docs.rs]
# Documentation configuration for docs.rs
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
panic = "abort"
